projects/compiler/test/typechecker/unary/error_neg.1.out
Error at %FILE_NAME%:1:2
Type mismatch
  |  !"hello"
      ^
Expected: Bool
but instead found: String
